# westeros

./: Makefile.am  configure.ac
brcm/: Makefile.am
drm/: Makefile.am  Makefile.in  drm_egl_utils.c  drm_egl_utils.h  test_westeros_gl.c  westeros-gl.c
include/: westeros-gl.h
rpi/: Makefile.am
src/: Makefile.am  westeros-render-gl.cpp  westeros-test.cpp
